--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
       <li><a href="#matrizes" class="nav-link">Matrizes</a></li>
     </ul>
   </nav>
-  <hr>
 
   <main id="main-doc">
     <section class="main-section" id="introducao_aos_algoritmos">
@@ -39,6 +38,7 @@
       <p>Os algoritmos estão presentes em todas as áreas de nossas vidas mais do que podemos imaginar. Os algoritmos fazem parte no nosso dia a dia quando navegamos na internet, assistimos um vídeo no Youtube, jogamos no celular ou num console um jogo qualquer, etc.</p>
       <p>E aprender algoritmos é simples. No início, tentamos criar rotinas para resolver pequenos problemas ou tarefas, como, por exemplo, somar dois números. Conforme os estudos avançam e nosso conhecimento a respeito do assunto melhora, os problemas ou tarefas a serem resolvidos vão ficando mais complexos.</p>
     </section>
+    <hr>
 
     <section class="main-section" id="primeiro_algoritmo">
       <header>Primeiro Algoritmo</header>
@@ -94,6 +94,7 @@
       <p>Caractere <br> Ex: "Gustavo"   "Algoritmo"   "123"</p>
       <p>Lógico <br> Ex: verdadeiro   falso</p>
     </section>
+    <hr>
 
     <section class="main-section" id="comando_de_entrada_e_operadores">
       <header>Comando de Entrada e Operadores</header>
@@ -106,6 +107,7 @@
         <code>leia (numero)</code>
       </p>
     </section>
+    <hr>
 
     <section class="main-section" id="operadores_logicos_e_relacionais">
       <header>Operadores Lógicos e Relacionais</header>
@@ -120,6 +122,7 @@
       <p>Não servem para comparar resultados de expressões ou números e sempre retornam resultados lógicos também.</p>
       <p>Os <strong>operadores relacionais</strong> e os <strong>operadores lógicos</strong> resultam sempre em valores lógicos <strong>VERDADEIRO</strong> ou <strong>FALSO</strong>.</p>
     </section>
+    <hr>
 
     <section class="main-section" id="estruturas_condicionais_1">
       <header>Estruturas Condicionais 1</header>
@@ -168,6 +171,7 @@
         FimSe
       </pre>
     </section>
+    <hr>
 
     <section class="main-section" id="estruturas_condicionais_2">
       <header>Estruturas Condicionais 2</header>
@@ -229,6 +233,7 @@
         FimEscolha
       </pre>
     </section>
+    <hr>
 
     <section class="main-section" id="estruturas_de_repeticao_1">
       <header>Estruturas de Repetição 1</header>
@@ -246,6 +251,7 @@
       </pre>
       <p>*Se arrumar o quarto, estará liberado e sairá da repetição.</p>
     </section>
+    <hr>
 
     <section class="main-section" id="estruturas_de_repeticao_2">
       <header>Estruturas de Repetição 2</header>
@@ -261,6 +267,7 @@
       </pre>
       <p>*Se arrumar o quarto, estará liberado e sairá da repetição.</p>
     </section>
+    <hr>
 
     <section class="main-section" id="estruturas_de_repeticao_3">
       <header>Estruturas de Repetição 3</header>
@@ -270,10 +277,11 @@
       <p>O PARA é diferente das outras duas estruturas de repetição por não precisar utilizar expressões lógicas para resolver o problema.</p>
       <p>Um ponto de atenção: não utilizar essa estrutura quando não souber o número de repetições.</p>
     </section>
+    <hr>
  
     <section class="main-section" id="procedimentos">
       <header>Procedimentos</header>
-      <p>Procedimento é o primeiro tipo de <strong>rotina</strong> a ser aprendida nesse curso.</p>
+      <p>Procedimento é um tipo de <strong>rotina</strong>.</p>
       <h3>Passagem de Parâmetro</h3>
       <h4>Por valor</h4>
       <p>Quando a passagem é por valor, apenas o valor é passado - ou copiado - pra dentro do parâmetro do procedimento. Os valores iniciais, no programa principal, não são alterados.</p>
@@ -284,11 +292,11 @@
       <h4>Escopo</h4>
       <p>Escopo é o local onde uma determinada variável vai funcionar.</p>
     </section>
+    <hr>
 
     <section class="main-section" id="funcoes">
       <header>Funções</header>
-      <p>Funções são o segundo tipo de rotina a ser aprendida no curso.</p>
-      <p>A principal diferença entre usar funcões e procedimentos é que durante um procedimento não tem como retornar um valor diretamente no programa principal, e durante uma função você tem um valor de retorno, ou seja, é possível retornar um resultado.</p>
+      <p>Função é um outro tipo de rotina. A principal diferença entre usar funcões e procedimentos é que durante um procedimento não tem como retornar um valor diretamente no programa principal, e durante uma função você tem um valor de retorno, ou seja, é possível retornar um resultado.</p>
       <h3>Notas</h3>
       <p>
         No exemplo abaixo: <br>
@@ -303,6 +311,7 @@
       <p>O uso de parênteses no RETORNE da função é opcional.</p>
       <p>Ao trabalhar com função, o ideal é não escrever nada dentro do corpo da função, e sim retornar ao algoritmo principal pra que você possa escrever da maneira que achar melhor.</p>
     </section>
+    <hr>
 
     <section class="main-section" id="vetores">
       <header>Vetores</header>
@@ -321,18 +330,8 @@
         FimPara
       </pre>
       <p>A variável contador, do trecho acima, será um valor inteiro que vai contar cada uma das 10 posições. O usuário digitará cada um dos 10 valores e eles serão armazenados no vetor.</p>
-      <h3>Notas</h3>
-      <p>Índice: é uma posição/endereço dentro do vetor.</p>
-      <p>Variáveis Compostas Homogêneas Unidimensionais = Vetor</p>
-      <ul>
-        <li>Compostas ↔ variável composta de vários espaços.</li>
-        <li>Homogêneas ↔ todos os espaços da variável são do mesmo tipo</li>
-        <li>Unidimensionais ↔ para identificá-las, é necessário somente um endereço</li>
-      </ul>
-      <p>A principal vantagem de se usar vetores é que podemos guardar e recuperar esses valores guardados.</p>
-      <p>Em variáveis simples, lemos um valor e a partir do momento em que outro é lido, ele apaga o valor anterior. Não dá para voltar no tempo e dizer em quais posições foram digitados os valores.</p>
-      <p>Com vetores temos vários espaços em um mesma variável e, por conta disso, podemos voltar e trabalhar com os valores lidos.</p>
     </section>
+    <hr>
     
     <section class="main-section" id="matrizes">
       <header>Matrizes</header>
@@ -343,10 +342,6 @@
       <p>Para referenciar um elemento da matriz declarada acima, fazemos assim:</p>
       <code>m[2,3] &lt;- 5</code>
       <p>O número 5 ficará, dentro dessa matriz, na linha 2 e na coluna 3.</p>
-      <h3>Notas</h3>
-      <p>Variáveis Compostas Homogêneas Multidimensionais = Matrizes</p>
-      <p>Matriz 3x3 é também conhecida como matriz de terceira ordem.</p>
-      <p>O minuto 29:28 dessa aula é muito engraçado!</p>
     </section>
   </main>
 </body>
