feat: criei outro link na section observação

--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
       <hr>
 
       <section class="observacao">
-        <p>O material acima faz parte das minhas anotações do <strong>Curso de Algorítimo</strong>, do site <a href="https://www.cursoemvideo.com/curso/curso-de-algoritmo/" target="_blank">Curso em Vídeo</a>.</p>
+        <p>O material acima faz parte das minhas anotações do <a href="https://github.com/rafa-san/curso-em-video-algoritmo" target="_blank">Curso de Algorítimo</a>, do site <a href="https://www.cursoemvideo.com/curso/curso-de-algoritmo/" target="_blank">Curso em Vídeo</a>.</p>
       </section>
     </main>
   </body>
